--- a/index.html
+++ b/index.html
@@ -131,6 +131,40 @@
               <div class="team__item__details">
                 <h3 class="team__name">Mark Guerrero</h3>
                 <p class="team__text">Product Designer</p>
+                <ul class="team__list__icons">
+                  <li class="team__items__icons">
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/instagram-icon.svg"
+                        alt="instagram-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/twitter-icon.svg"
+                        alt="twitter-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/facebook-icon.svg"
+                        alt="facebook-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/linkedin-icon.svg"
+                        alt="linkedin-icon"
+                      />
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team__item">
@@ -138,6 +172,40 @@
               <div class="team__item__details">
                 <h3 class="team__name">Tom Ford</h3>
                 <p class="team__text">Frontend Developer</p>
+                <ul class="team__list__icons">
+                  <li class="team__items__icons">
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/instagram-icon.svg"
+                        alt="instagram-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/twitter-icon.svg"
+                        alt="twitter-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/facebook-icon.svg"
+                        alt="facebook-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/linkedin-icon.svg"
+                        alt="linkedin-icon"
+                      />
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team__item">
@@ -145,6 +213,40 @@
               <div class="team__item__details">
                 <h3 class="team__name">Camila Garcia</h3>
                 <p class="team__text">Marketing</p>
+                <ul class="team__list__icons">
+                  <li class="team__items__icons">
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/instagram-icon.svg"
+                        alt="instagram-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/twitter-icon.svg"
+                        alt="twitter-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/facebook-icon.svg"
+                        alt="facebook-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/linkedin-icon.svg"
+                        alt="linkedin-icon"
+                      />
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team__item">
@@ -152,6 +254,40 @@
               <div class="team__item__details">
                 <h3 class="team__name">Daniel Wilson</h3>
                 <p class="team__text">UI Designer</p>
+                <ul class="team__list__icons">
+                  <li class="team__items__icons">
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/instagram-icon.svg"
+                        alt="instagram-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/twitter-icon.svg"
+                        alt="twitter-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/facebook-icon.svg"
+                        alt="facebook-icon"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team__icon__link">
+                      <img
+                        src="images/icons/linkedin-icon.svg"
+                        alt="linkedin-icon"
+                      />
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
