--- a/index.html
+++ b/index.html
@@ -131,37 +131,33 @@
               <div class="team__item__details">
                 <h3 class="team__name">Mark Guerrero</h3>
                 <p class="team__text">Product Designer</p>
-                <ul class="team__list__icons">
+                  <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/instagram-icon.svg"
-                        alt="instagram-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#instagram"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/twitter-icon.svg"
-                        alt="twitter-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#twitter"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/facebook-icon.svg"
-                        alt="facebook-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#facebook"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/linkedin-icon.svg"
-                        alt="linkedin-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#linkedin"/>
+                    </svg>
                     </a>
                   </li>
                 </ul>
@@ -175,34 +171,30 @@
                 <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/instagram-icon.svg"
-                        alt="instagram-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#instagram"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/twitter-icon.svg"
-                        alt="twitter-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#twitter"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/facebook-icon.svg"
-                        alt="facebook-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#facebook"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/linkedin-icon.svg"
-                        alt="linkedin-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#linkedin"/>
+                    </svg>
                     </a>
                   </li>
                 </ul>
@@ -216,34 +208,30 @@
                 <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/instagram-icon.svg"
-                        alt="instagram-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#instagram"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/twitter-icon.svg"
-                        alt="twitter-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#twitter"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/facebook-icon.svg"
-                        alt="facebook-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#facebook"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/linkedin-icon.svg"
-                        alt="linkedin-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#linkedin"/>
+                    </svg>
                     </a>
                   </li>
                 </ul>
@@ -257,34 +245,30 @@
                 <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/instagram-icon.svg"
-                        alt="instagram-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#instagram"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/twitter-icon.svg"
-                        alt="twitter-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#twitter"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/facebook-icon.svg"
-                        alt="facebook-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#facebook"/>
+                    </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                      <img
-                        src="images/icons/linkedin-icon.svg"
-                        alt="linkedin-icon"
-                      />
+                    <svg>
+                      <use href="images/icons.svg#linkedin"/>
+                    </svg>
                     </a>
                   </li>
                 </ul>
