--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <h2 hidden>Features</h2>
           <ul class="features__list">
             <li class="features__items">
+              <img class="features__image"src="images/icons/antenna.svg" alt="antenna">
               <h3 class="features__head">Strategy</h3>
               <p class="features__text">
                 Our goal is to identify the business <br />problem to walk away
@@ -74,6 +75,7 @@
               </p>
             </li>
             <li class="features__items">
+              <img class="features__image"src="images/icons/clock.svg" alt="antenna">
               <h3 class="features__head">Punctuality</h3>
               <p class="features__text">
                 Bring the key message to the <br />brand's audience for the best
@@ -82,6 +84,7 @@
               </p>
             </li>
             <li class="features__items">
+              <img class="features__image"src="images/icons/diagram.svg" alt="antenna">
               <h3 class="features__head">Diligence</h3>
               <p class="features__text">
                 Research and confirm brands that<br />
@@ -90,6 +93,7 @@
               </p>
             </li>
             <li class="features__items">
+              <img class="features__image"src="images/icons/astronaut.svg" alt="antenna">
               <h3 class="features__head">Technologies</h3>
               <p class="features__text">
                 Design practice focused on digital<br />
@@ -131,33 +135,33 @@
               <div class="team__item__details">
                 <h3 class="team__name">Mark Guerrero</h3>
                 <p class="team__text">Product Designer</p>
-                  <ul class="team__list__icons">
+                <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#instagram"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#instagram" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#twitter"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#twitter" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#facebook"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#facebook" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#linkedin"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#linkedin" />
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -171,30 +175,30 @@
                 <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#instagram"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#instagram" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#twitter"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#twitter" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#facebook"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#facebook" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#linkedin"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#linkedin" />
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -208,30 +212,30 @@
                 <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#instagram"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#instagram" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#twitter"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#twitter" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#facebook"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#facebook" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#linkedin"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#linkedin" />
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -245,30 +249,30 @@
                 <ul class="team__list__icons">
                   <li class="team__items__icons">
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#instagram"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#instagram" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#twitter"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#twitter" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#facebook"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#facebook" />
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="team__icon__link">
-                    <svg>
-                      <use href="images/icons.svg#linkedin"/>
-                    </svg>
+                      <svg>
+                        <use href="images/icons.svg#linkedin" />
+                      </svg>
                     </a>
                   </li>
                 </ul>
