--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
           <h2 hidden>Features</h2>
           <ul class="features__list">
             <li class="features__items">
-              <img class="features__image"src="images/icons/antenna.svg" alt="antenna">
+              <img
+                class="features__image"
+                src="images/icons/antenna.svg"
+                alt="antenna"
+              />
               <h3 class="features__head">Strategy</h3>
               <p class="features__text">
                 Our goal is to identify the business <br />problem to walk away
@@ -75,7 +79,11 @@
               </p>
             </li>
             <li class="features__items">
-              <img class="features__image"src="images/icons/clock.svg" alt="antenna">
+              <img
+                class="features__image"
+                src="images/icons/clock.svg"
+                alt="antenna"
+              />
               <h3 class="features__head">Punctuality</h3>
               <p class="features__text">
                 Bring the key message to the <br />brand's audience for the best
@@ -84,7 +92,11 @@
               </p>
             </li>
             <li class="features__items">
-              <img class="features__image"src="images/icons/diagram.svg" alt="antenna">
+              <img
+                class="features__image"
+                src="images/icons/diagram.svg"
+                alt="antenna"
+              />
               <h3 class="features__head">Diligence</h3>
               <p class="features__text">
                 Research and confirm brands that<br />
@@ -93,7 +105,11 @@
               </p>
             </li>
             <li class="features__items">
-              <img class="features__image"src="images/icons/astronaut.svg" alt="antenna">
+              <img
+                class="features__image"
+                src="images/icons/astronaut.svg"
+                alt="antenna"
+              />
               <h3 class="features__head">Technologies</h3>
               <p class="features__text">
                 Design practice focused on digital<br />
@@ -281,8 +297,53 @@
           </ul>
         </div>
       </section>
+      <!-- Customer Section -->
       <section class="section__customers">
-        <h2>Customers</h2>
+        <h2 class="section__customer__header">Customers</h2>
+        <ul class="customer__list">
+          <li class="customer__items">
+            <a href="#" class="section__customer__link">
+              <svg>
+                <use href="images/icons-logo.svg#logo-01" />
+              </svg>
+            </a>
+          </li>
+          <li class="customer__items">
+            <a href="#" class="section__customer__link">
+              <svg>
+                <use href="images/icons-logo.svg#logo-02" />
+              </svg>
+            </a>
+          </li>
+          <li class="customer__items">
+            <a href="#" class="section__customer__link">
+              <svg>
+                <use href="images/icons-logo.svg#logo-03" />
+              </svg>
+            </a>
+          </li>
+          <li class="customer__items">
+            <a href="#" class="section__customer__link">
+              <svg>
+                <use href="images/icons-logo.svg#logo-04" />
+              </svg>
+            </a>
+          </li>
+          <li class="customer__items">
+            <a href="#" class="section__customer__link">
+              <svg>
+                <use href="images/icons-logo.svg#logo-05" />
+              </svg>
+            </a>
+          </li>
+          <li class="customer__items">
+            <a href="#" class="section__customer__link">
+              <svg>
+                <use href="images/icons-logo.svg#logo-06" />
+              </svg>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- Footer Section -->
@@ -297,6 +358,39 @@
           slaes for your business with digital<br />
           marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer__icon__container">
+        <h3 class="footer__icon__txt">Social Media</h3>
+        <ul class="footer__list__icons">
+          <li class="footer__items__icons">
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#instagram" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#twitter" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#facebook" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#linkedin" />
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
