--- a/portfolio.html
+++ b/portfolio.html
@@ -154,6 +154,39 @@
           marketing & growth solutions.
         </p>
       </div>
+      <div class="footer__icon__container">
+        <h3 class="footer__icon__txt">Social Media</h3>
+        <ul class="footer__list__icons">
+          <li class="footer__items__icons">
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#instagram" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#twitter" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#facebook" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__icon__link">
+              <svg>
+                <use href="images/icons.svg#linkedin" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
