revised-code-for-hw-04

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Header Section -->
-    <header class="header__port">
+    <header class="header">
       <div class="container header__container">
         <nav class="nav">
           <a href="index.html" class="nav__logo"
@@ -143,49 +143,51 @@
     </main>
     <!-- Footer Section -->
     <footer class="footer">
-      <div class="section__footer__container">
-        <a href="index.html" class="footer__link"
-          ><span class="footer__web">WEB</span
-          ><span class="footer__studio">STUDIO</span></a
-        >
-        <p class="footer__text">
-          Increase the flow of the customers and<br />
-          slaes for your business with digital<br />
-          marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer__icon__container">
-        <h3 class="footer__icon__txt">Social Media</h3>
-        <ul class="footer__list__icons">
-          <li class="footer__items__icons">
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#instagram" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#twitter" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#facebook" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#linkedin" />
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="footer__container">
+        <div class="section__footer__container">
+          <a href="index.html" class="footer__link"
+            ><span class="footer__web">WEB</span
+            ><span class="footer__studio">STUDIO</span></a
+          >
+          <p class="footer__text">
+            Increase the flow of the customers and<br />
+            slaes for your business with digital<br />
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer__icon__container">
+          <h3 class="footer__icon__txt">Social Media</h3>
+          <ul class="footer__list__icons">
+            <li class="footer__items__icons">
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#instagram" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#twitter" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#facebook" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#linkedin" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
