--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- Header Section -->
-    <header>
+    <header class="header">
       <div class="container header__container">
         <nav class="nav">
           <a href="index.html" class="nav__logo"
@@ -299,98 +299,102 @@
       </section>
       <!-- Customer Section -->
       <section class="section__customers">
-        <h2 class="section__customer__header">Customers</h2>
-        <ul class="customer__list">
-          <li class="customer__items">
-            <a href="#" class="section__customer__link">
-              <svg>
-                <use href="images/icons-logo.svg#logo-01" />
-              </svg>
-            </a>
-          </li>
-          <li class="customer__items">
-            <a href="#" class="section__customer__link">
-              <svg>
-                <use href="images/icons-logo.svg#logo-02" />
-              </svg>
-            </a>
-          </li>
-          <li class="customer__items">
-            <a href="#" class="section__customer__link">
-              <svg>
-                <use href="images/icons-logo.svg#logo-03" />
-              </svg>
-            </a>
-          </li>
-          <li class="customer__items">
-            <a href="#" class="section__customer__link">
-              <svg>
-                <use href="images/icons-logo.svg#logo-04" />
-              </svg>
-            </a>
-          </li>
-          <li class="customer__items">
-            <a href="#" class="section__customer__link">
-              <svg>
-                <use href="images/icons-logo.svg#logo-05" />
-              </svg>
-            </a>
-          </li>
-          <li class="customer__items">
-            <a href="#" class="section__customer__link">
-              <svg>
-                <use href="images/icons-logo.svg#logo-06" />
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="customer__container">
+          <h2 class="section__customer__header">Customers</h2>
+          <ul class="customer__list">
+            <li class="customer__items">
+              <a href="#" class="section__customer__link">
+                <svg>
+                  <use href="images/icons-logo.svg#logo-01" />
+                </svg>
+              </a>
+            </li>
+            <li class="customer__items">
+              <a href="#" class="section__customer__link">
+                <svg>
+                  <use href="images/icons-logo.svg#logo-02" />
+                </svg>
+              </a>
+            </li>
+            <li class="customer__items">
+              <a href="#" class="section__customer__link">
+                <svg>
+                  <use href="images/icons-logo.svg#logo-03" />
+                </svg>
+              </a>
+            </li>
+            <li class="customer__items">
+              <a href="#" class="section__customer__link">
+                <svg>
+                  <use href="images/icons-logo.svg#logo-04" />
+                </svg>
+              </a>
+            </li>
+            <li class="customer__items">
+              <a href="#" class="section__customer__link">
+                <svg>
+                  <use href="images/icons-logo.svg#logo-05" />
+                </svg>
+              </a>
+            </li>
+            <li class="customer__items">
+              <a href="#" class="section__customer__link">
+                <svg>
+                  <use href="images/icons-logo.svg#logo-06" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer Section -->
     <footer class="footer">
-      <div class="section__footer__container">
-        <a href="index.html" class="footer__link"
-          ><span class="footer__web">WEB</span
-          ><span class="footer__studio">STUDIO</span></a
-        >
-        <p class="footer__text">
-          Increase the flow of the customers and<br />
-          slaes for your business with digital<br />
-          marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer__icon__container">
-        <h3 class="footer__icon__txt">Social Media</h3>
-        <ul class="footer__list__icons">
-          <li class="footer__items__icons">
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#instagram" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#twitter" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#facebook" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="footer__icon__link">
-              <svg>
-                <use href="images/icons.svg#linkedin" />
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="footer__container">
+        <div class="section__footer__container">
+          <a href="index.html" class="footer__link"
+            ><span class="footer__web">WEB</span
+            ><span class="footer__studio">STUDIO</span></a
+          >
+          <p class="footer__text">
+            Increase the flow of the customers and<br />
+            slaes for your business with digital<br />
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer__icon__container">
+          <h3 class="footer__icon__txt">Social Media</h3>
+          <ul class="footer__list__icons">
+            <li class="footer__items__icons">
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#instagram" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#twitter" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#facebook" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__icon__link">
+                <svg>
+                  <use href="images/icons.svg#linkedin" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
